chore: reset working directory new line workflow

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -75,6 +75,10 @@ jobs:
         # Permitir archivos especiales en GitHub Pages
         touch docs/.nojekyll
 
+
+        
+    - name: Reset working directory
+      run: git reset --hard HEAD
     #################################################
     # Publicar cambios a la rama main
     #################################################
