--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,93 +1,107 @@
-name: Build and Deploy Documentation
+name: 🚀 Build Professional Documentation
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
+    paths:
+      - 'software/documentation/**'
+      - 'hardware/**'
+      - 'README.md'
+      - '.github/workflows/build_docs.yml'
   pull_request:
-    branches: [main]
-  workflow_dispatch:
+    branches: [ main ]
+    paths:
+      - 'software/documentation/**'
+      - 'hardware/**'
+      - 'README.md'
 
 permissions:
   contents: write
 
 jobs:
-  build-doc:
-    runs-on: ubuntu-latest
-
+  build_and_deploy:
+    runs-on: ubuntu-22.04
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: '3.11'
+        
+    - name: Install dependencies
+      run: |
+        cd software/documentation
+        pip install -r requirements.txt
 
-    - name: Install dependencies (Python + LaTeX + Ghostscript)
+    - name: Install Chrome
       run: |
         sudo apt-get update
-        sudo apt-get install -y texlive-latex-extra texlive-fonts-recommended texlive-lang-english ghostscript latexmk
-        pip install -r software/documentation/requirements.txt
-        pip install -r software/sphinx/requirements.txt
+        sudo apt-get install -y wget gnupg
+        wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg
+        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
 
-    #################################################
-    # Generar PDF del Product Brief con nombre del repo
-    #################################################
-    - name: Build LaTeX PDF from README
-      working-directory: software/documentation
-      env:
-        REPO_NAME: ${{ github.event.repository.name }}
+    - name: Generate professional documentation
       run: |
-        python test_readme.py
-        python generate_pdf.py
-        gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/printer \
-           -dNOPAUSE -dQUIET -dBATCH \
-           -sOutputFile=build/${REPO_NAME}_product_brief.pdf build/*.pdf
+        cd software/documentation
+        python generate_professional_pdf.py
+        echo "✅ Professional documentation generated"
 
-    #################################################
-    # Generar Documentación Sphinx (HTML + PDF)
-    #################################################
-    - name: Build Sphinx Documentation
-      working-directory: software/sphinx
+    - name: Prepare docs directory
       run: |
-        make clean
-        make pdfx
-
-    #################################################
-    # Preparar contenido para docs/
-    #################################################
-    - name: Prepare docs/ directory
-      env:
-        REPO_NAME: ${{ github.event.repository.name }}
-      run: |
-        rm -rf docs
+        # Create docs directory if it doesn't exist
         mkdir -p docs
-
-        # PDF generado desde LaTeX
-        cp software/documentation/build/${REPO_NAME}_product_brief.pdf docs/
-
-        # PDF generado por Sphinx
-        cp software/sphinx/pdf/programmer.pdf docs/${REPO_NAME}_sphinx.pdf
-
-        # HTML generado por Sphinx
-        cp -r software/sphinx/docs/* docs/
-
-        # Permitir archivos especiales en GitHub Pages
+        
+        # Copy ALL generated files from build/ to docs/
+        if [ -d "software/documentation/build" ]; then
+          echo "📁 Contents of build directory:"
+          ls -la software/documentation/build/
+          
+          # Copy all files from build directory
+          cp -v software/documentation/build/* docs/ 2>/dev/null || echo "Some files might not exist"
+          echo "✅ All build files copied"
+          
+          # Copy images directory if it exists
+          if [ -d "software/documentation/build/images" ]; then
+            cp -r software/documentation/build/images docs/
+            echo "✅ Images directory copied"
+          fi
+          
+          # Specifically copy image files (JPG, PNG, etc.)
+          if ls software/documentation/build/*.jpg >/dev/null 2>&1; then
+            cp -v software/documentation/build/*.jpg docs/
+            echo "✅ JPG files copied"
+          fi
+          if ls software/documentation/build/*.png >/dev/null 2>&1; then
+            cp -v software/documentation/build/*.png docs/
+            echo "✅ PNG files copied"
+          fi
+          
+          echo "📁 Contents of docs directory after copying:"
+          ls -la docs/
+        fi
+        
+        # Create simple index.html redirect
+        echo "<!DOCTYPE html><html><head><meta charset=\"UTF-8\"><title>Documentation</title><meta http-equiv=\"refresh\" content=\"0; url=datasheet_professional.html\"></head><body><p>Redirecting...</p></body></html>" > docs/index.html
+        
+        # GitHub Pages setup
         touch docs/.nojekyll
 
-
-        
-    - name: Reset working directory
-      run: git reset --hard HEAD
-    #################################################
-    # Publicar cambios a la rama main
-    #################################################
-    - name: Commit and push docs/ to main
-      if: github.ref == 'refs/heads/main'
+    - name: Deploy to repository
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git pull origin main
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        
         git add docs/
-        git commit -m "Deploy full documentation and product brief [skip ci]" || echo "No changes"
-        git push origin main
+        if ! git diff --staged --quiet; then
+          git commit -m "Deploy documentation [skip ci]"
+          git push origin main
+        fi
